# tap-salesforce

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
tap_salesforce/: __init__.py  sync.py
tap_salesforce/salesforce/: __init__.py  bulk.py  report_rest.py
