[tool.poetry]
name = "tap-salesforce"
version = "2.0.13"
description = "Singer.io tap for extracting data from the Salesforce API"
authors = ["Stitch"]
homepage = "https://singer.io"
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "~3.7"
requests = "^2.20.0"
singer-python = "~5.10.0"
xmltodict = "~0.11.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[tool.poetry.plugins."console_scripts"]
tap-salesforce = "tap_salesforce:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
